--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 export DPKG_GENSYMBOLS_CHECK_LEVEL=4
 
 override_dh_auto_configure:
-	qmake LIBDIR=/usr/lib "QMAKE_CXXFLAGS=$(CFLAGS)" signon-oauth2.pro
+	dh_auto_configure -- LIBDIR=/usr/lib "QMAKE_CXXFLAGS=$(CFLAGS)" signon-oauth2.pro
 
 override_dh_install:
 	rm -f debian/tmp/etc/signon-ui/webkit-options.d/*
