--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
+export QT_SELECT=QT4
 export DPKG_GENSYMBOLS_CHECK_LEVEL=4
 
 override_dh_auto_configure:
@@ -12,8 +13,8 @@ override_dh_install:
 	rm -f debian/tmp/etc/signon-ui/webkit-options.d/*
 	dh_install --fail-missing
 
-overrde_dh_auto_tests:
-	xfvb-run dbus-test-runner -t dh_auto_tests
+override_dh_auto_tests:
+	xvfb-run dbus-test-runner -t dh_auto_tests
 
 %:
 	dh $@
