--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ override_dh_install:
 	rm -f debian/tmp/etc/signon-ui/webkit-options.d/*
 	dh_install --fail-missing
 
-override_dh_auto_tests:
+override_dh_auto_test:
 	xvfb-run dbus-test-runner -t dh_auto_tests
 
 %:
