--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ override_dh_install:
 	dh_install --fail-missing
 
 override_dh_auto_test:
-	xvfb-run dbus-test-runner -t dh_auto_tests
+	xvfb-run dbus-test-runner -t dh_auto_test
 
 %:
 	dh $@
