--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Section: libs
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          signon-ui,
+Breaks: account-plugin-google (<< 0.12)
 Description: Single Signon oauth2 plugin
  Oauth2 plugin for the Single Signon framework
 
