--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ override_dh_install:
 	dh_install --fail-missing
 
 override_dh_auto_test:
-	xvfb-run -a dbus-test-runner -t dh_auto_test
+	xvfb-run -a dh_auto_test
 
 %:
 	dh $@
